0.2.4
- try/except when the mapper sets init.__name__ on a mapped class,
supports python 2.3

0.2.3
- overhaul to mapper compilation to be deferred.  this allows mappers
to be constructed in any order, and their relationships to each
other are compiled when the mappers are first used.
- fixed a pretty big speed bottleneck in cascading behavior particularly
when backrefs were in use
- the attribute instrumentation module has been completely rewritten; its
now a large degree simpler and clearer, slightly faster.  the "history"
of an attribute is no longer micromanaged with each change and is
instead part of a "CommittedState" object created when the 
instance is first loaded.  HistoryArraySet is gone, the behavior of
list attributes is now more open ended (i.e. theyre not sets anymore).
- py2.4 "set" construct used internally, falls back to sets.Set when
"set" not available/ordering is needed.
- fix to transaction control, so that repeated rollback() calls 
dont fail (was failing pretty badly when flush() would raise 
an exception in a larger try/except transaction block)
- "foreignkey" argument to relation() can also be a list.  fixed
auto-foreignkey detection [ticket:151]
- fixed bug where tables with schema names werent getting indexed in
the MetaData object properly
- fixed bug where Column with redefined "key" property wasnt getting
type conversion happening in the ResultProxy [ticket:207]
- fixed 'port' attribute of URL to be an integer if present
- fixed old bug where if a many-to-many table mapped as "secondary"
had extra columns, delete operations didnt work
- bugfixes for mapping against UNION queries
- fixed incorrect exception class thrown when no DB driver present
- added NonExistentTable exception thrown when reflecting a table
that doesnt exist [ticket:138]
- small fix to ActiveMapper regarding one-to-one backrefs, other
refactorings
- overridden constructor in mapped classes gets __name__ and
__doc__ from the original class